# tjvm

./: .gitignore  README.md
src/: CMakeLists.txt  tjvm.c
src/class_file/: attribute_info.h  class_file.c  class_file.h  class_reader.h  constant_pool.h  member_info.h
src/class_path/: README.md  class_path.c  class_path.h
src/classpath/: README.md  classpath.c  classpath.h
src/gc/: object_mark.c  object_mark.h
src/interpreter/: bytecode_interpreter.c  bytecode_interpreter.h  bytecode_reader.h  ins_compare.h  ins_constant.h  ins_control.h  ins_convert.h  ins_extend.h  ins_load.h  ins_math.h  ins_opcode.h  ins_reference.h  ins_reserved.h  ins_stack.h  ins_store.h
src/runtime/: access_flags.h  class.c  class.h  class_loader.c  class_loader.h  class_ref.c  class_ref.h  field.c  field.h  field_ref.c  field_ref.h  frame.c  frame.h  interface_method_ref.c  interface_method_ref.h  local_vars.c  local_vars.h  method.c  method.h  method_descriptor.h  method_descriptor_parser.c  method_descriptor_parser.h  method_ref.c  method_ref.h  object.c  object.h  oop.c  oop.h  operand_stack.c  operand_stack.h  runtime_constant_pool.c  runtime_constant_pool.h  slot.c  slot.h  stack.c  stack.h  thread.c  thread.h
src/util/: bi_tree.c  bi_tree.h  bis_tree.c  bis_tree.h  file.c  file.h  hash_map.c  hash_map.h  list.c  list.h  log.c  log.h  number.h  rb_tree.h  stack.c  stack.h  util.h
test/class_file/: CMakeLists.txt  class_file_test.c
test/class_path/: CMakeLists.txt  class_path_test.c
test/interpreter/: CMakeLists.txt  interpreter.c
test/runtime/: CMakeLists.txt  runtime_data_area_test.c
test/util/: CMakeLists.txt  hash_map_test.c  util_test.c
